[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Effects/Transistion/FadeOut.res" type="PackedScene" id=1]
[ext_resource path="res://assets/images/game_over.png" type="Texture" id=2]
[ext_resource path="res://src/Scenes/GameOverScreen.gd" type="Script" id=3]

[node name="GameOverScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="FadeOut" parent="." instance=ExtResource( 1 )]

[node name="GameOver" type="Sprite" parent="FadeOut"]
self_modulate = Color( 1, 1, 1, 0 )
light_mask = 0
position = Vector2( 640, 360 )
z_index = 1024
texture = ExtResource( 2 )

[node name="TextTween" type="Tween" parent="."]
